# projeto-final-ri

./: .gitattributes  .gitignore  README.md  build_all_embeddings.sh  dataset.duckdb  description.md  generate_typst_tables.py  generate_typst_time_tables.py  gte-onnx.tar.zst  main.py  mmarco-onnx.tar.zst  notes.txt  pitch.md  pyproject.toml  run_full_benchmarks.sh  time_tables.typ  todos_rprec_mrr.typ  unpack_rankers.sh  visualize_optimization.py
results/: base_comparison_all_variants_group3.json  base_search_atire_group3.json  base_search_bm25+_group3.json  base_search_bm25l_group3.json  base_search_bmx_group3.json  base_search_lucene_group3.json  base_search_robertson_group3.json  benchmark_embeddings_alibaba_group2.json  benchmark_embeddings_lamdec_gemma_group2.json  benchmark_embeddings_lamdec_qwen_group2.json  benchmark_embeddings_qwen_group1.json  benchmark_embeddings_qwen_group2.json  benchmark_embeddings_qwen_group3.json  benchmark_hybrid_fusion_bm25_bm25____emb_alibaba_group2.json  benchmark_hybrid_fusion_bm25_bm25____emb_qwen_group2.json  comparison_all_variants_group3.json  comparison_all_variants_groupall.json  fusion_grid_search_bm25+_qwen_group3.json  grid_search_atire_group3.json  grid_search_atire_groupall.json  grid_search_bm25+_groupall.json  grid_search_bm25l_group3.json  grid_search_bm25l_groupall.json  grid_search_bmx_groupall.json  grid_search_lucene_group3.json  grid_search_lucene_groupall.json  grid_search_robertson_group3.json  grid_search_robertson_groupall.json  ranx_hybrid_ranker_bm25_atire___emb_jina_group3_gte.json  (+2 more)
src/: .settings.py.swp  (+6 more)
(+82 files in other folders)
