[project]
name = "test-ri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "baguetter>=0.1.1",
    "bm25s>=0.2.14",
    "duckdb>=1.4.2",
    "einops>=0.8.1",
    "langchain-text-splitters>=1.0.0",
    "nltk>=3.9.2",
    "prettytable>=3.17.0",
    "pydantic-settings>=2.12.0",
    "pyserini>=1.3.0",
    "ranx>=0.3.21",
    "rerankers[transformers]>=0.10.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "torch>=2.2",
]
